Changelog of flooding-base
==========================


1.49 (unreleased)
-----------------

- Nothing changed yet.


1.48 (2013-11-20)
-----------------

- Select breach in navigation tree on click.


1.47 (2013-11-18)
-----------------

- Add search functionality.a


1.46 (2013-10-23)
-----------------

- Fix urls for table app.


1.45 (2013-10-21)
-----------------

- Add 'Archief' tab into infowindow.


1.44 (2013-10-07)
-----------------

- Change workspace for pdok maps.


1.43 (2013-09-24)
-----------------

- Fix styles.


1.42 (2013-09-23)
-----------------

- Fix updateSize of map on resize window.

- Fix layout of LayerSwitcher.

- Update OpenLayers to 2.12

- Add top10nl as baselayer.

- Handle error due TRANSPORT_ERROR by bad wifi connection in startup.js.


1.41 (2013-09-10)
-----------------

- Change layers field to TextFiled type.


1.40 (2013-09-09)
-----------------

- Update smartclient to v9.0.

- Add speed control button for animations.


1.39 (2013-08-14)
-----------------

- Set projection to maplayer in config.js.


1.38 (2013-07-12)
-----------------

- Fix OpenStreetMap layer.


1.37 (2013-06-18)
-----------------

- Fix bug in NGeneral.js.


1.36 (2013-06-12)
-----------------

- Extended intervalFormatter to use an interval > 30 days.

1.35 (2012-12-20)
-----------------

- Fix widht of IFrame for Table, Importeren, Exporteren (removed float:left style from flooding_base/static/weblib/isomorphic/system/modules/ISC_Core.js


1.34 (2012-12-06)
-----------------

- Added functionality to use a 3di form on creating 3di scenario.

1.33 (2012-11-20)
-----------------

Added gaug.es tracking Javascript to the gui index.html because Joep
wants to track the site.


1.32 (2012-10-19)
-----------------

Add Javascript that can open a specific project/scenario upon loading
the homepage.

Get the information about which scenario to open from the session (it
is set in a view in flooding-lib).

Some cleanup in Javascript.


1.31 (2012-09-21)